--- a/.github/workflows/maven-verify copy.yml
+++ b/.github/workflows/maven-verify copy.yml
@@ -1,14 +1,15 @@
-name: Maven Verify 2
+name: Build Maven Docker
 
 on:
-  workflow_dispatch: 
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out the repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up JDK 15
@@ -17,16 +18,13 @@ jobs:
           java-version: '15'
           distribution: 'adopt'
 
-      - name: Cache local Maven repository
+      - name: Cache Maven packages
         uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-
-      # - name: Run Maven verify
-      #   run: mvn verify
 
       - name: Build Docker image
         run: |
