--- a/.github/workflows/maven-verify.yml
+++ b/.github/workflows/maven-verify.yml
@@ -1,14 +1,15 @@
-name: Maven Verify
+name: Build Maven Docker
 
 on:
-  workflow_dispatch: 
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out the repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up JDK 15
@@ -17,18 +18,22 @@ jobs:
           java-version: '15'
           distribution: 'adopt'
 
-      # - name: Cache Maven dependencies
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: ~/.m2/repository
-      #     key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-maven-
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-      - name: Run Maven verify
-        run: mvn verify
+      # - name: Get mvn modules
+      #   run: |
+      #     ./mvnw dependency:resolve-plugins dependency:resolve dependency:go-offline
+
+      - name: Copy artifacts
+        run: |
+          cp -R ~/.m2 ./m2
 
       - name: Build Docker image
-        run: |
-          docker build --build-arg MAVEN_CACHE=~/.m2/repository -t my-maven-verify .
-          # docker build .
+        run: docker build -t crm --build-arg BUILD_STAGE=cicd .
+
