--- a/.github/workflows/maven-verify.yml
+++ b/.github/workflows/maven-verify.yml
@@ -26,13 +26,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      # - name: Get mvn modules
+      # - name: Copy artifacts
       #   run: |
-      #     ./mvnw dependency:resolve-plugins dependency:resolve dependency:go-offline
-
-      - name: Copy artifacts
-        run: |
-          cp -R ~/.m2 ./m2
+      #     cp -R ~/.m2 ./m2
 
       - name: Build Docker image
         run: docker build -t crm --build-arg BUILD_STAGE=cicd .
